logs/validate.20260331-124143.log
error[E0432]: unresolved import `state_machines_macros`
  --> src/experiments/state_machine_set_mt.rs:26:9
   |
26 |     use state_machines_macros::tokenized_state_machine;
   |         ^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `state_machines_macros`
   |
help: there is a crate or module with a similar name
   |
26 |     use verus_state_machines_macros::tokenized_state_machine;
   |         ++++++

error[E0433]: failed to resolve: use of undeclared type `SetSM`
   --> src/experiments/state_machine_set_mt.rs:154:17
    |
154 |             ) = SetSM::Instance::initialize();
    |                 ^^^^^ use of undeclared type `SetSM`
    |
help: consider importing one of these structs
    |
 20 +     use crate::experiments::state_machine_set_mt::state_machine_set_mt::RwLockToks::Instance;
    |
 20 +     use vstd::rwlock::RwLockToks::Instance;
    |
 20 +     use vstd::shared::Dupe::Instance;
    |
help: if you import `Instance`, refer to it directly
    |
154 -             ) = SetSM::Instance::initialize();
154 +             ) = Instance::initialize();
    |

error[E0433]: failed to resolve: use of undeclared type `SetSM`
   --> src/experiments/state_machine_set_mt.rs:109:34
    |
109 |         pub ghost_count: Tracked<SetSM::count>,
    |                                  ^^^^^ use of undeclared type `SetSM`

error[E0433]: failed to resolve: use of undeclared type `SetSM`
   --> src/experiments/state_machine_set_mt.rs:113:23
    |
113 |         pub instance: SetSM::Instance,
    |                       ^^^^^ use of undeclared type `SetSM`

error[E0433]: failed to resolve: use of undeclared type `SetSM`
   --> src/experiments/state_machine_set_mt.rs:130:27
    |
130 |         pub inst: Tracked<SetSM::Instance>,
    |                           ^^^^^ use of undeclared type `SetSM`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
Elapsed: 0s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 23520MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
